# Mater

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
mater/: __init__.py  __main__.py  load.py
mater/core/: __init__.py  load.py  who.py
others/: basic_signal_operations_qmf.py  qmf.py  qmf3.py  qmf_perfect_reconstruction_eval.py  wfilters.mat  wfilters.py
scripts/: mater_test.py
src/mater/: __init__.py  __main__.py
src/mater/core/: who.py
src/mater/fft/: __init__.py  fft.py
src/mater/wavelets/: __init__.py  qmf.py  signal_ops.py  wfilters.py
