[project]
name = "mater"
version = "0.1.2"
description = "Package to make python commands closer to matlab's"
authors = [
    {name = "VCOliver",email = "victorcruz.01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "polars (>=1.33.1,<2.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
