[project]
name = "mater"
version = "0.1.4"
description = "Package to make python commands closer to matlab's"
authors = [{ name = "VCOliver", email = "victorcruz.01@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.3.3,<3.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "scipy>=1.16.1,<2.0.0",
    "pandas>=2.3.2,<3.0.0",
    "polars>=1.33.1,<2.0.0",
]

[project.scripts]
mater = "mater.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-cov>=7.0.0,<8",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
